# eLaundry_hmi

./: .gitignore  CMakeLists.txt  README.md
gui/: FrontendControls.qml  FrontendControlsUI.qml  FrontendDashboard.qml  FrontendNovaLockersCarrousel.qml  FrontendWelcome.qml  FrontendWelcomeMessage.qml  IBackend.h  IconBluetooth.qml  IconEthernet.qml  IconLock.qml  IconPause.qml  IconPlay.qml  ItemConnection.qml  ItemHalo.qml  NovaLockerModel.qml  eLaundry.qml  iLaundry.qml  main.qml  qml.qrc  qmldir
src/: BackendControls.cpp  BackendControls.h  BackendControlsUI.cpp  BackendControlsUI.h  BackendDashboard.cpp  BackendDashboard.h  BackendWelcome.cpp  BackendWelcome.h  BackendWelcomeMessage.cpp  BackendWelcomeMessage.h  CMakeLists.txt  CRpiGpioDriver.cpp  CRpiGpioDriver.h  CardNovaLocker.cpp  CardNovaLocker.h  HMILog.cpp  HMILog.h  IBackend.h  IGpioDriver.h  INovaCore.h  INovaDb.h  IQtObject.h  NovaCore.cpp  NovaCore.h  NovaDb.cpp  NovaDb.h  QtObject.cpp  QtObject.h  db.json  main.cpp  nova_db_types.h  types.h  wlog.h
